@@ -5,40 +5,30 @@ import java.util.*;
 import java.io.*;
 import java.net.*;
 public class SoundManager {
-  private AudioClip bgmSound;
-  private AudioClip excellentSound;
-  private AudioClip badSound;
-  private AudioClip repelSound;
-  private AudioClip dissapearSound;
+  private HashMap<String, AudioClip> sounds = new HashMap<String, AudioClip>();
   private static SoundManager sharedInstance = new SoundManager();
   public static SoundManager getInstance() {
     return sharedInstance;
   }
   public SoundManager() {
     try {
-      bgmSound = Applet.newAudioClip(new URL("file:bgm.wav"));
-      excellentSound = Applet.newAudioClip(new URL("file:excellent.wav"));
-      badSound = Applet.newAudioClip(new URL("file:bad.wav"));
-      repelSound = Applet.newAudioClip(new URL("file:repel.wav"));
-      dissapearSound = Applet.newAudioClip(new URL("file:dissapear.wav"));
+      File soundsDirectory = new File("Sounds");
+      File[] files = soundsDirectory.listFiles();
+      for(File file : files) {
+        if(file.getName().indexOf(".") > 0) {
+          String soundName = file.getName().substring(0, file.getName().lastIndexOf("."));
+          this.sounds.put(soundName, Applet.newAudioClip(file.toURI().toURL()));
+        }
+      }
     } catch(Exception e) {
       System.out.println(e);
     }
   }
-  public void bgm() {
-    bgmSound.loop();
+  public void play(String soundName) {
+    this.sounds.get(soundName).play();
   }
-  public void excellent() {
-    excellentSound.play();
-  }
-  public void bad() {
-    badSound.play();
-  }
-  public void repel() {
-    repelSound.play();
-  }
-  public void dissapear() {
-    dissapearSound.play();
+  public void loop(String soundName) {
+    this.sounds.get(soundName).loop();
   }
 }
 
